yaml/girder.yaml
apiVersion: v1
kind: Pod
spec:
  template:
    metadata:
      labels:
        name: my-girder
  containers:
  - args:
    - -d
    - mongodb://$(MONGO_PORT_27017_TCP_ADDR):$(MONGO_PORT_27017_TCP_PORT)/girder
    image: girder/girder:1.3.1
    imagePullPolicy: Always
    name: girder
    ports:
    - containerPort: 8080
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /static/img/Girder_Favicon.png
        port: 8080
        scheme: HTTP
      initialDelaySeconds: 5
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    resources:
      limits:
        cpu: 500m
        memory: 2G
      requests:
        cpu: 100m
        memory: 50M
    securityContext:
      privileged: false
