yaml/girder-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: girder
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: my-girder
---
apiVersion: v1
kind: Service
metadata:
    service: mongo
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: my-mongo
