yaml/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: client-port
    port: 80
    protocol: TCP
  selector:
    component: nginx
