yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-inress
spec:
  rules:
  - host: nginx.xarthisius.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
spec:
  selector:
    app: default-http-backend
  ports:
    - port: 8080
      protocol: TCP
